--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="http://zenilton-patrocinio.github.io/i2dl/css/main.css">
+    <link rel="stylesheet" type='text/css' href="http://zenilton-patrocinio.github.io/i2dl/css/main.css">
 
     <!-- Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
